third section completed

--- a/index.html
+++ b/index.html
@@ -90,6 +90,46 @@
     <button class="donate-1">Donate Now</button>
     <button class="donate-2">Donate Now</button>
     <button class="donate-3">Donate Now</button>
+
+    <div class="footer">
+        <div>
+            <img src="images/logo.png" alt="logo">
+
+        </div>
+        <div>
+            <h3>About</h3>
+            <p>introduction</p>
+            <p>chair man message</p>
+            <p> bank details </p>
+        </div>
+        <div>
+            <h3>explore</h3>
+            <p>news</p>
+            <p>media</p>
+            <p>contact</p>
+            <p>donations</p>
+
+        </div>
+        <div>
+            <h3>Contact</h3>
+            <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan</p>
+            <p>UAN: 111-729-526 (+0092-213)4130786-90</p>
+            <p>CELL: 92-311-1729526</p>
+            <p>USA NO +1(716)941 7792</p>
+            <p>UK NO (+44)115 970 6256</p>
+        </div>
+
+    </div>
+    <p class="last">IP address data powered by IPinfo</p>
+    
+    <p class="last">copyrights 2024 by saylani walfare int trust !</p>
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
