responsive website made

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="nav-2">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Media</a></li>
+                <!-- <li><a href="#">Media</a></li> -->
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Bank Details</a></li>
@@ -90,28 +90,27 @@
     <button class="donate-2">Donate Now</button>
     <button class="donate-3">Donate Now</button>
 
-<<<<<<< HEAD
-=======
+
     <div class="footer">
         <div>
-            <img src="images/logo.png" alt="logo">
+            <img class="last-img" src="images/logo.png" alt="logo">
 
         </div>
-        <div>
+        <div class="one">
             <h3>About</h3>
-            <p>introduction</p>
-            <p>chair man message</p>
-            <p> bank details </p>
+            <p>Introduction</p>
+            <p>Chair Man Message</p>
+            <p>Bank Details </p>
         </div>
-        <div>
-            <h3>explore</h3>
-            <p>news</p>
-            <p>media</p>
-            <p>contact</p>
-            <p>donations</p>
+        <div class="two">
+            <h3>Explore</h3>
+            <p>News</p>
+            <p>Media</p>
+            <p>Contact</p>
+            <p>Donations</p>
 
         </div>
-        <div>
+        <div class="three">
             <h3>Contact</h3>
             <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan</p>
             <p>UAN: 111-729-526 (+0092-213)4130786-90</p>
@@ -122,15 +121,13 @@
 
     </div>
     <p class="last">IP address data powered by IPinfo</p>
-    
+
     <p class="last">copyrights 2024 by saylani walfare int trust !</p>
 
 
 
 
 
-
->>>>>>> development
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
